# processos_tramitando

./: .gitignore  .replit  CHANGELOG.md  Processos Tramitando 2024.xlsx  README.md  create_admin.py  forms.py  main.py  models.py  pyproject.toml  replit.nix  routes.py
static/css/: custom.css
static/js/: main.js
templates/: alterar_senha.html  base.html  contrato_form.html  dashboard.html  dashboard_contratos.html  documento_publicacao.html  fase_form.html  fase_list.html  login.html  notificacoes.html  processo_form.html  processo_list.html  processo_publicar.html  processo_tramitar.html  processo_view.html  processos_publicados.html  register.html  relatorio_publicados.html  user_form.html  user_list.html
