[project]
name = "repl-nix-servicodireto2024"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "flask-mail>=0.10.0",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "openpyxl>=3.1.5",
    "weasyprint>=63.1",
    "sqlalchemy>=2.0.36",
]
